--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Device</title>
-  <link href="css/normalize.css" rel="stylesheet">
+  <link href="fonts/normalize.css" rel="stylesheet">
   <link href="css/style.css"  rel="stylesheet">
 </head>
 <body>
@@ -17,48 +17,48 @@
   </form>
   <ul class="user-navigation">
     <li>
-      <a href="#">Войти</a>
+      <a class="header-navigation__link" href="#">Войти</a>
     </li>
     <li>
-      <a href="#">Сравнить</a>
+      <a class="header-navigation__link" href="#">Сравнить</a>
     </li>
     <li>
-      <a href="#">Корзина</a>
+      <a class="header-navigation__link" href="#">Корзина</a>
     </li>
   </ul>
   <nav class="header-navigation">
     <ul class="navigation-list">
       <li>
-        <a href="catalog.html">Каталог товаров</a>
+        <a class="navigation-list__link" href="catalog.html">Каталог товаров</a>
         <ul class="catalog-list">
           <li>
-            <a href="#">Вирутальная реальность</a>
+            <a class="header-navigation__link" href="#">Вирутальная реальность</a>
           </li>
           <li>
-            <a href="#">Моноподы для селфи</a>
+            <a class="header-navigation__link" href="#">Моноподы для селфи</a>
           </li>
           <li>
-            <a href="#">Экшн камеры</a>
+            <a class="header-navigation__link" href="#">Экшн камеры</a>
           </li>
           <li>
-            <a href="#">Фитнес браслеты</a>
+            <a class="header-navigation__link" href="#">Фитнес браслеты</a>
           </li>
           <li>
-            <a href="#">Умные часы</a>
+            <a class="header-navigation__link" href="#">Умные часы</a>
           </li>
           <li>
-            <a href="#">Квадрокоптеры</a>
+            <a class="header-navigation__link" href="#">Квадрокоптеры</a>
           </li>
         </ul>
       </li>
       <li>
-        <a href="delivery.html">Доставка</a>
+        <a class="navigation-list__link" href="delivery.html">Доставка</a>
       </li>
       <li>
-        <a href="warranty.html">Гарантия</a>
+        <a class="navigation-list__link" href="warranty.html">Гарантия</a>
       </li>
       <li>
-        <a href="contacts.html">Контакты</a>
+        <a class="navigation-list__link" href="contacts.html">Контакты</a>
       </li>
     </ul>
   </nav>
@@ -67,19 +67,19 @@
 <main class="main-page">
   <h1 class="page-title">Моноподы для селфи</h1>
   <ul class="breadcrumbs">
-    <li>
+    <li class="breadcrumbs_link">
       <a href="/">Главная</a>
     </li>
-    <li>
+    <li class="breadcrumbs_link">
       <a href="#">Каталог товаров</a>
     </li>
-    <li>
+    <li class="breadcrumbs_link">
       <a class="breadcrumbs-current">Моноподы для селфи</a>
     </li>
   </ul>
 
   <section>
-    <h2 class="filter-list">ФИЛЬТР:</h2>
+    <h2 class="filter-list">Фильтр:</h2>
     <form class="filter" method="get" action="https://echo.htmlacademy.ru">
       <fieldset>
         <legend class="filter-difference">Стоимость</legend>
@@ -132,9 +132,9 @@
   </section>
 
   <section>
-    <h2 class="sorting-list">СОРТИРОВКА:</h2>
+    <h2 class="sorting-list">Сортировка:</h2>
     <ul class="sorting">
-      <li class="price">
+      <li class="sorting-list__Link">
         <a class="btn-price"  href="#">По цене</a>
       </li>
       <li class="type">
@@ -158,7 +158,7 @@
     <h2 class="visually-hidden">Список товаров</h2>
     <ul class="catalog-list">
       <li class="catalog-item-1">
-        <a href="catalog-item-1.html">
+        <a href="#">
           <h3 class="item-1">Любительская селфи-палка</h3>
         </a>
         <p class="catalog-item-image">
@@ -172,7 +172,7 @@
       </li>
 
       <li class="catalog-item-2">
-        <a href="catalog-item-2.html">
+        <a href="#">
           <h3 class="item-2">Профессиональная селфи-палка</h3>
         </a>
         <p class="catalog-item-image">
@@ -186,7 +186,7 @@
       </li>
 
       <li class="catalog-item-3">
-        <a href="catalog-item-3.html">
+        <a href="#">
           <h3 class="item-3">Непотопляемая селфи-палка</h3>
         </a>
         <p class="catalog-item-image">
@@ -200,7 +200,7 @@
       </li>
 
       <li class="catalog-item-4">
-        <a href="catalog-item-4.html">
+        <a href="#">
           <h3 class="item-4">Селфи палка «Следуй за мной»</h3>
         </a>
         <p class="catalog-item-image">
