--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Device</title>
-  <link href="css/normalize.css" rel="stylesheet">
+  <link href="fonts/normalize.css" rel="stylesheet">
   <link href="css/style.css"  rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
-  <a class="main-header-logo" href="/">
+  <a class="main-header-logo">
     <img src="img/logo-header.svg" height="36" width="163" alt="Логотип магазина Device">
   </a>
   <form class="search-form" action="search-site" method="post">
@@ -17,13 +17,13 @@
   </form>
   <ul class="user-navigation">
     <li>
-      <a class="header-navigation__link" href="#">Войти</a>
+      <a class="user-navigation__link" href="#">Войти</a>
     </li>
     <li>
-      <a class="header-navigation__link" href="#">Сравнить</a>
+      <a class="user-navigation__link" href="#">Сравнить</a>
     </li>
     <li>
-      <a class="header-navigation__link" href="#">Корзина</a>
+      <a class="user-navigation__link" href="#">Корзина</a>
     </li>
   </ul>
   <nav class="header-navigation">
@@ -147,13 +147,13 @@
     <h2 class="visually-hidden">Наши услуги</h2>
     <ul class="services">
       <li>
-        <a class="btn-delivery" href="#delivery">Доставка</a>
+        <a class="services__link" href="#delivery">Доставка</a>
       </li>
       <li>
-        <a class="btn-warranty" href="#warranty">Гарантия</a>
+        <a class="services__link" href="#warranty">Гарантия</a>
       </li>
       <li>
-        <a class="btn-credit" href="#credit">Кредит</a>
+        <a class="services__link" href="#credit">Кредит</a>
       </li>
     </ul>
     <ul class="services-list">
@@ -225,13 +225,13 @@
     </a>
     <ul class="footer_user">
       <li>
-        <a class="footer-button__login" href="#">Войти</a>
+        <a class="footer_user__link" href="#">Войти</a>
       </li>
       <li>
-        <a class="footer-button__compare" href="#">Сравнить</a>
+        <a class="footer_user__link" href="#">Сравнить</a>
       </li>
       <li>
-        <a class="footer-button__cart" href="#">Корзина</a>
+        <a class="footer_user__link" href="#">Корзина</a>
       </li>
     </ul>
   </div>
@@ -240,13 +240,13 @@
     <p class="footer__address">г.Москва , Улица строителей , 15</p>
     <ul class="site-navigation">
       <li>
-        <a class="btn-delivery" href="#delivery">Доставка</a>
+        <a class="site-navigation__link" href="#delivery">Доставка</a>
       </li>
       <li>
-        <a class="btn-warranty" href="#warranty">Гарантия</a>
+        <a class="site-navigation__link" href="#warranty">Гарантия</a>
       </li>
       <li>
-        <a class="btn-contacts" href="#contacts">Контакты</a>
+        <a class="site-navigation__link" href="#contacts">Контакты</a>
 
       </li>
     </ul>
@@ -256,13 +256,13 @@
   <div class="footer-bottom">
     <ul class="footer-social">
       <li>
-        <a class="social-button"  href="#">facebook.com</a>
+        <a class="footer-social__link"  href="#">facebook.com</a>
       </li>
       <li>
-        <a class="social-button" href="#">twitter.com</a>
+        <a class="footer-social__link" href="#">twitter.com</a>
       </li>
       <li>
-        <a class="social-button" href="#">instagram.com</a>
+        <a class="footer-social__link" href="#">instagram.com</a>
       </li>
     </ul>
     <p class="footer-copyright"><a href="https://htmlacademy.ru">html academy</a></p>
