--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h2 class="visually-hidden">Селфи-палка</h2>
     <b class="main-slider">Делай селфи, как Бен Стиллер</b>
     <img src="img/slider1.jpg" height="486" width="384" alt="Селфи-палка">
-    <p class="main-slider__Link">Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
+    <p class="main-slider_text">Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
     <a class="device-btn" href="#">Подробнее</a>
     <ul class="feature-list">
       <li>
@@ -91,7 +91,7 @@
     <h2 class="visually-hidden">Фитнес браслет</h2>
     <b class="main-slider">Худеем правильно!</b>
     <img src="img/slider2.jpg" height="485" width="345" alt="Фитнес браслет">
-    <p class="main-slider__Link">Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
+    <p class="main-slider_text">Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
     <a class="device-btn" href="#">Подробнее</a>
     <ul class="feature-list">
       <li>
@@ -105,7 +105,7 @@
     <h2 class="visually-hidden">Квадракоптер</h2>
     <b class="main-slider">Порхает как бабочка, жалит как пчела!</b>
     <img src="img/slider3.jpg" height="334" width="526" alt="Квадракоптер">
-    <p class="main-slider__Link">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+    <p class="main-slider_text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
     <a class="device-btn" href="#">Подробнее</a>
     <ul class="feature-list">
       <li>
