--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="slide-description">
         <h3 class="title">Делай селфи,<br>
           как Бен Стиллер!</h3>
-        <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
+        <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
         <a class="button" href="#">Подробнее</a>
         <table class="about-tech">
           <tr class="table-row">
@@ -143,7 +143,7 @@
     </article>
 
     <div class="slide-buttons">
-      <label for="" tabindex="0"></label>
+      <label for="btn-1" tabindex="0"></label>
       <label for="btn-2" tabindex="0"></label>
       <label for="btn-3" tabindex="0"></label>
     </div>
