--- a/catalog.html
+++ b/catalog.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Device</title>
-  <link href="fonts/normalize.css" rel="stylesheet">
-  <link href="css/style.css"  rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/min.style.css"  rel="stylesheet">
 </head>
 <body class="page-not-logged">
 <header class="main-header container">
-  <div class="main-header-background main-header-background-index"></div>
   <nav class="main-navigation">
-    <a class="header-logo index-logo">Device</a>
+    <a class="header-logo index-logo" href="index.html">Device</a>
     <form class="search" action="https://echo.htmlacademy.ru" method="get">
       <input id="search-site" type="search" name="search" placeholder="Поиск по сайту">
       <label for="search-site">
@@ -20,7 +19,10 @@
     </form>
     <ul class="user-navigation">
       <li class="user-navigation-item user-enter">
-        <a href="#">Войти</a>
+        <a href="#">Валентин Петухов</a>
+      </li>
+      <li class="user-navigation-item user-out-header">
+        <a href="#">Выйти</a>
       </li>
       <li class="user-navigation-item compare">
         <a href="#">Сравнить</a>
@@ -54,7 +56,7 @@
         </ul>
       </li>
       <li class="site-navigation-item">
-        <a href="#">Доставка</a>
+        <a href="#warranty.html">Доставка</a>
       </li>
       <li class="site-navigation-item">
         <a href="#">Гарантия</a>
@@ -65,7 +67,6 @@
     </ul>
   </nav>
 </header>
-
 <main>
   <div class=" container">
     <h1 class="title title-catalog">Моноподы для селфи</h1>
@@ -237,12 +238,11 @@
     </section>
   </div>
 </main>
-
 <footer class="main-footer">
   <div class="container">
     <div class="main-footer-content">
       <div class="footer-top">
-        <a class="footer-logo index-logo">Device</a>
+        <a class="footer-logo index-logo" href="index.html">Device</a>
         <ul class="footer-user-navigation">
           <li class="footer-user-navigation-item user-enter-footer user-enter-index">
             <a href="#">Войти</a>
@@ -285,25 +285,12 @@
             </a>
           </li>
         </ul>
-        <a class="html-logo" href="https://htmlacademy.ru">
+        <a class="html-logo" href="https://htmlacademy.ru/intensive/htmlcss">
         </a>
       </div>
     </div>
   </div>
 </footer>
-<script src="script.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
